# speech-to-text-service

./: .env.dev  .env.prod  .env.qa  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  deploy.yml
api/: main.py
api/config/: logging.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_qa.py
api/controllers/: __init__.py  streaming_controller.py  transcription_controller.py
api/models/: schemas.py
api/services/: audio_service.py  streaming_service.py  transcriber_service.py  transcription_service.py
client/: cli.py
client/web/: README.md  index.html
client/web/css/: styles.css
client/web/js/: app.js
documentation/: ARCHITECTURE.md  CHECKLIST.md  CLEAN_ARCHITECTURE.md  DEPLOYMENT.md  FINAL_ARCHITECTURE.md  LOGGING.md  STREAMING_ARCHITECTURE.md  TESTING.md  WEB_CLIENT_ARCHITECTURE.md
samples/: hello.m4a
scripts/: call_local.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_health.py  test_integration.py  test_limits.py  test_transcribe_ok.py
tests/integration/controllers/: __init__.py  test_streaming_controller.py  test_transcription_controller.py
tests/unit/: __init__.py  test_conftest_fixtures.py  test_conftest_utils.py  test_main.py
tests/unit/config/: __init__.py  test_logging.py  test_settings.py
tests/unit/controllers/: test_dependencies.py  test_streaming_controller_ws.py
tests/unit/models/: __init__.py  test_schemas.py
tests/unit/services/: test_audio_service.py  test_streaming_service.py  test_transcriber_service.py  (+1 more)
(+6 files in other folders)
