[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-service"
version = "0.1.0"
description = "Speech-to-Text microservice using faster-whisper + FastAPI"
authors = [{ name = "Shuwen" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    "webrtcvad-wheels>=2.0.10.post2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "types-requests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "client*", "samples*", "scripts*", ".github*"]

[tool.ruff]
line-length = 30
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
